# GoogleKickStart

2022/CodingPracticewithKickStartSession#1/CentauriPrime/: CMakeLists.txt  main.cpp
2022/CodingPracticewithKickStartSession#1/H-index/: CMakeLists.txt  main.cpp
2022/CodingPracticewithKickStartSession#1/Hex/: CMakeLists.txt  main.cpp
2022/CodingPracticewithKickStartSession#1/MilkTea/: CMakeLists.txt  main.cpp
2022/CodingPracticewithKickStartSession#1/SampleProblem/: CMakeLists.txt  main.cpp
2022/RoundA/InterestingIntegers/: CMakeLists.txt  main.cpp
2022/RoundA/PalindromeFreeStrings/: CMakeLists.txt  main.cpp
2022/RoundC/AntsOnAStick/: CMakeLists.txt  main.cpp
2022/RoundC/PalindromicDeletions/: CMakeLists.txt  main.cpp
